--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^7.1",
         "illuminate/support": "~5.5.0|~5.6.0|~5.7.0",
         "nesbot/carbon": "^1.21",
-        "spatie/crawler": "^4.1.0"
+        "spatie/crawler": "^4.1.0",
+        "ext-dom": "*"
     },
     "require-dev": {
         "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0",
